# Project_1

./: ReadME.md  docker-compose.yaml  pyproject.toml
core/: admin.py  models.py  serializer.py  urls.py  views.py
network/: admin.py  apps.py  filters.py  models.py  serializer.py  signals.py  views.py
network/migrations/: 0001_initial.py
todolist/: settings.py  urls.py
