[tool.poetry]
name = "project-1"
version = "0.1.0"
description = ""
authors = ["evgeniatimoshkina <tea302@yandex.ru>"]
readme = "README.md"
packages = [{include = "project_1"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
